--- a/environment.yml
+++ b/environment.yml
@@ -4,9 +4,8 @@ channels:
   - defaults
 dependencies:
   - python=3.8.8
-  - geopandas=0.9.0
-  - cartopy=0.18.0
-  - notebook=6.2.0
-  - rasterio=1.2.0
-  -earthpy=0.9.0
+  - earthpy=0.9.4
+  - matplotlib=3.5.1
+  - numpy=1.21.5
+  - tifffile=2021.11.2
 prefix: C:\Users\e16006469\Anaconda3\envs\egm722
